# compute

./: Cargo.toml  README.md
application/: Cargo.toml
application/src/: main.rs
corelib/: Cargo.toml
corelib/src/: client.rs  lib.rs
research/: .gitignore  5 Point Relative Pose.ipynb  Classification.ipynb  Stereo-Matching.ipynb  checkpoint_mobilenet_v2.pth.tar  checkpoint_test.tar  environment.yml  semantic-segmentation.ipynb
research/utils/: Movie Processor.ipynb
research/vslam/: semantic.py
scripts/: calibrate.py
server/: Cargo.toml  README.md
server/src/: config.toml  main.rs  mqtt.rs
vision/: .gitignore  Cargo.toml  README.md  TODO.md  calibrate.py  environment.yml  main.py  requirements.txt
vision/data/calibration/: calibration.xml  mapL1.npy  mapL2.npy  mapR1.npy  mapR2.npy
vision/lib/: __init__.py  calibrate.py  camera.py  config.py  depth.py
vision/semantic/: checkpoint_test.tar
vision/src/: lib.rs  main.rs
vision/vslam/: __init__.py  app.py  arduino.py  camera.py  client.py  config.py  control.py  database.py  depth.py  dynamics.py  parameters.py  segmentation.py  semantic.py  sensors.py  serial.py  slam.py  state.py  utils.py
vision/vslam/scripts/: calibrate.py  remote.py  tune_depth_estimation.py
