[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
vision = { path = "../vision" }
corelib = { path = "../corelib" }
tokio = { version = "*", features = ["full"] }
futures = "*"
rumqttc = "*"
